fix issues with video player overlap

--- a/src/styles/Disclaimer.css
+++ b/src/styles/Disclaimer.css
@@ -2,6 +2,7 @@
     text-align: center;
     border-top: 2px solid white;
     margin-top: 10vh;
+    display: inline-block;
 }
 .disclaimer-text {
     width: 50%;
