--- a/src/styles/LivestreamPlayer.css
+++ b/src/styles/LivestreamPlayer.css
@@ -1,5 +1,6 @@
 .livestream-player {
     position: relative;
+    height: max-content;
 }
 .player {
     position: relative;
